samples/_failures_safe/1761252264_85ba49_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eacaa4b1.c: In function ‘main’:
./samples/SAFE/__tmp_eacaa4b1.c:155:13: error: expected expression at end of input
  155 |             case
      |             ^~~~
./samples/SAFE/__tmp_eacaa4b1.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eacaa4b1.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eacaa4b1.c:155:13: error: expected declaration or statement at end of input
